# continual-graph-fraud-detection

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  setup.sh
ares_results/cpu/logs/: slurm-cola_naive-20412501.out  slurm-dominant_naive-20412502.out  slurm-dominant_replay-20412504.out  slurm-dominant_replay-20412508.out  slurm-dominant_replay_vf-20412509.out  slurm-ocgnn_cumulative-20412497.out  slurm-ocgnn_replay-20412499.out
ares_results/cpu/outputs/: continual_cola_naive.json  continual_ocgnn_cumulative.json  continual_ocgnn_naive.json  continual_ocgnn_replay.json  static_cola.json  static_ocgnn.json
ares_results/gpu/logs/: slurm-gpu_cola_naive-20413096.out  slurm-gpu_dominant_naive-20413797.out  slurm-gpu_dominant_replay-20413799.out  slurm-gpu_ocgnn_cumulative-20413800.out  slurm-gpu_ocgnn_naive-20412588.out  slurm-gpu_ocgnn_replay-20413801.out  (+1 more)
experiments/: run_experiment.py
outputs/: static_dominant.json
plots/: README.md
presentation/: canva_outline_pl.md  script_pl.md  slides.html  slides_v2.html
scripts/: plot_results.py  visualize_results.py
scripts/cpu/: job_cola_naive.sh  job_dominant_naive.sh  job_dominant_replay.sh  job_dominant_replay_vfeatures.sh  job_ocgnn_cumulative.sh  job_ocgnn_naive.sh  job_ocgnn_replay.sh
scripts/gpu/: job_gpu_cola_naive.sh  job_gpu_dominant_naive.sh  job_gpu_dominant_replay.sh  job_gpu_ocgnn_cumulative.sh  job_gpu_ocgnn_naive.sh  job_gpu_ocgnn_replay.sh  job_gpu_ocgnn_replay_vfeatures.sh
src/data/: loader.py  preprocessor.py
src/evaluation/: metrics.py
src/fraud_detection/: __init__.py  adapter.py  baseline.py  concepts.py  config.py  graph.py  preprocessing.py  run_experiment.py
src/graph/: builder.py
src/models/: adapter.py  replay.py
(+24 files in other folders)
