[project]
name = "graph-based-fraud-detection"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "networkx",
    "scikit-learn",
    "matplotlib",
    "kaggle",
    "torch==2.9.1",
    "torch-geometric",
    "torch-sparse",
    "torch-scatter",
    "pygod",
    "pyclad",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
environments = ["sys_platform == 'darwin'"]
find-links = ["https://data.pyg.org/whl/torch-2.9.1+cpu.html"]
